# herbario-sonico

./: HerbarioSonico.spec  LICENSE  composer.py  gui.py  midi_synthesizer.py  pipeline.py  pyproject.toml  scanner.py  synthesizer.py
.github/workflows/: build.yml
__pycache__/: scanner._numba_scan-13.py313.1.nbc  scanner._numba_scan-13.py313.nbi  synthesizer._numba_synthesis_loop-25.py313.1.nbc  synthesizer._numba_synthesis_loop-25.py313.nbi  synthesizer.get_note_freq_numba-18.py313.1.nbc  synthesizer.get_note_freq_numba-18.py313.nbi
