[project]
name = "herbario-sonico"
version = "0.1.0"
description = "Proyecto para transformar imágenes de plantas en sonidos."
authors = [
    {name = "Kevin Serrano - info@kevinserrano.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "tqdm (==4.66.1)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "numpy (<2.3)",
    "numba (>=0.61.2,<0.62.0)",
    "pyinstaller (>=6.14.2,<7.0.0)",
    "mido (>=1.3.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
